tests/invalid/ArrayGenerator_Invalid_4.whiley
function f(byte n) -> int[]:
    return [0; n]
